--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".AddActivity"
-            android:theme="@style/NoAction" />
+            android:theme="@style/NoAction">
+
+        </activity>
         <activity
             android:name=".AddActivity2"
             android:theme="@style/NoAction" />
