--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile files('libs/commons-net-3.3.jar')
     compile files('libs/picasso-2.5.2.jar')
+    compile 'com.squareup:otto:1.3.8'
 }
     apply plugin: 'com.google.gms.google-services'
